# siril-auto-stacker

./: .env  .gitignore  README.md  config.ini  dev  info  install.sh  pyproject.toml  run  siril-auto-stack.code-workspace  stack  test.sh  uninstall.sh  validation-script.temp.sh  watch-performance.sh
_dev/: config.ini
app/: .env  README.md  pyproject.toml  test.sh
app/src/: bad-pixel-map.py  calibrate.py  convert.py  email.py  main.py  master-biases.py  plot.py  postprocess.py  register.py  stack.py
app/src/astrometry/: __init__.py  wcs.py
app/src/camera/: __init__.py  gphoto.py
app/src/logger/: logger.py
app/src/siril/: __init__.py  biases.py  calibrate.py  convert.py  darks.py  frame.py  master_library.py  post.py  postprocess.py  preprocess.py  session.py  siril.py  stack.py
scripts/: post-preview-autostretch.sh  post-remove-green.sh  preprocess.sh  start.sh
scripts/util/: c.sh  help.sh
scripts/validation/: check.sh
src/: stack.py
src/exif/: __init__.py  luminance.py  main.py  validation.py
src/siril/: chromatic_abberation.py  input_confirm.py  logger.py  main.py  maintenance.py  photometric_cc.py  platesolve.py  post_preview.py  post_remove_green.py  rgb_split.py  siril.py  stack_biases.py  stack_darks.py  stack_flats.py  stack_lights.py  starnet.py  test.py
src/validation/: __init__.py  main.py
templates/: post-preview-autostretch.ssf  post-remove-green.ssf  preprocess.ssf  simple-stack-lights.ssf
